--- a/Deployment/PersistentVolume/hello-pv/hello-pv.yml
+++ b/Deployment/PersistentVolume/hello-pv/hello-pv.yml
@@ -4,9 +4,11 @@ kind: PersistentVolume
 metadata:
   name: hello-pv
 spec:
-  accessModes: 
+  capacity:
+    storage: 1Gi
+  accessModes:
     - ReadWriteOnce
   hostPath:
     path: /var/log
   persistentVolumeReclaimPolicy: Retain
-  volumeMode: FileSystem
+  volumeMode: Filesystem
