--- a/Deployment/PersistentVolume/hello-pv/hello-pvc.yml
+++ b/Deployment/PersistentVolume/hello-pv/hello-pvc.yml
@@ -8,5 +8,5 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1GiB
-  volumeMode: FileSystem
+      storage: 1Gi
+  volumeMode: Filesystem
